@@ -26,6 +26,9 @@ module type S = sig
   val add_vertex : G.t -> G.V.t -> G.t
   val add_edge : G.t -> G.V.t -> G.V.t -> G.t
   val add_edge_e : G.t -> G.E.t -> G.t
+  val remove_vertex : G.t -> G.V.t -> G.t
+  val remove_edge : G.t -> G.V.t -> G.V.t -> G.t
+  val remove_edge_e : G.t -> G.E.t -> G.t
 end
 
 module type INT = S with type G.V.label = int
@@ -37,6 +40,9 @@ module P(G : Sig.P) = struct
   let add_vertex = G.add_vertex
   let add_edge = G.add_edge
   let add_edge_e = G.add_edge_e
+  let remove_vertex = G.remove_vertex
+  let remove_edge = G.remove_edge
+  let remove_edge_e = G.remove_edge_e
 end
 
 module I(G : Sig.I) = struct
@@ -46,4 +52,7 @@ module I(G : Sig.I) = struct
   let add_vertex g v = G.add_vertex g v; g
   let add_edge g v1 v2 = G.add_edge g v1 v2; g
   let add_edge_e g e = G.add_edge_e g e; g
+  let remove_vertex g v = G.remove_vertex g v; g
+  let remove_edge g v1 v2 = G.remove_edge g v1 v2; g
+  let remove_edge_e g e = G.remove_edge_e g e; g
 end
